--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "drive-tools",
-  "version": "0.0.21",
+  "version": "0.0.22",
   "description": "Node.js package for listing drives and getting system path (Desktop, Downloads, and etc)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test.js",
+    "test:sandbox": "node test_sandbox.js"
   },
   "repository": {
     "type": "git",
